# NCAAB

./: .gitignore  Dockerfile  README.md  app.py  bart_mlp_megatron_basic_test.onnx  bart_self_attention_megatron_basic_test.onnx  mlp_megatron_basic_test.onnx  pyproject.toml  render.yaml  requirements.txt  run_err.txt  run_log.txt  schedule_check.py  self_attention_megatron_basic_test.onnx  stats_script.py  temp_inspect_real.py  test_types_BFLOAT16.onnx  test_types_FLOAT16.onnx  verify_today.py  webgpu_pow_cast_test.onnx
.github/: copilot-instructions.md
data/: conferences.csv  d1_conferences.csv  team_branding.csv  team_map.csv
docs/: onnx_qnn_setup.md
outputs/: align_period_2025-11-15.csv  align_period_2025-11-15_edges.csv  align_period_2025-11-16.csv  align_period_2025-11-16_edges.csv  align_period_2025-11-17.csv  align_period_2025-11-17_edges.csv  align_period_2025-11-18.csv  align_period_2025-11-18_edges.csv  align_period_2025-11-19.csv  features_2025-11-09_with_priors.csv  games_2025-11-02.csv  games_2025-11-03.csv  games_2025-11-04.csv  games_2025-11-05.csv  games_2025-11-06.csv  games_2025-11-07.csv  games_2025-11-08.csv  games_2025-11-09.csv  games_2025-11-11.csv  games_2025-11-12.csv  games_2025-11-13.csv  games_2025-11-14.csv  games_2025-11-15.csv  games_2025-11-16.csv  games_2025-11-17.csv  games_2025-11-18.csv  games_2025-11-19.csv  games_2025-11-20.csv  games_2025-11-21.csv  games_2025-11-22.csv  games_2025-11-23.csv  games_2025-11-24.csv  games_2025-11-25.csv  games_2025-11-26.csv  games_2025-11-27.csv  games_2025-11-28.csv  games_2025-11-29.csv  (+231 more)
(+313 files in other folders)
