[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncaab-model"
version = "0.1.0"
description = "Predictive NCAAB betting engine with ONNX DirectML inference"
authors = [{ name = "Mostg" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pandas",
	"numpy",
	"typer",
	"requests",
	"rich",
	"Flask",
	"jinja2",
	"onnx",
	"onnxruntime",
	"scikit-learn",
	"matplotlib",
	"seaborn",
	"Unidecode",
	"rapidfuzz",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ncaab_model*"]
