[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncaab-model"
version = "0.1.0"
description = "Predictive NCAAB betting engine with ONNX DirectML inference"
authors = [{ name = "Mostg" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pandas",
	"numpy",
	"typer",
	"requests",
	"rich",
	"Flask",
	"jinja2",
	"onnx",
	# Removed heavy build-time deps for ARM64 environment (scikit-learn, matplotlib, seaborn)
	"Unidecode",
	"rapidfuzz",
	"pydantic",
	"pydantic-settings",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ncaab_model*"]
